--- a/README
+++ b/README
@@ -41,8 +41,17 @@ Afterwards enter the following command to build and install dmenu
 
          make clean install
 
+Distros
+-------
+dmenu-rs is available from the following sources:
+- [Arch AUR](https://aur.archlinux.org/packages/dmenu-rs/)
+
+If you'd like for this to be available on another distro, raise an issue
+or submit a pull request with a README change pointing to the released
+pagkage.
+
 Running dmenu
--------------
+=============
 See the man page for details. For a quick test, run:  
 
          make test
