Updated readme for patches

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+Please view README.md instead if possible
+-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 dmenu-rs - dynamic menu
 =======================
 dmenu is an efficient dynamic menu for X.  
